--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "rtc-ion"
 version = "0.1.0"
-edition = "2021"
+edition = "rustc"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 actix-web = "4"
+wasi = "0.10.2+wasi-snapshot-preview1"
